loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:3: error: not found: value estSurBlanc
while (estSurBlanc()) {
       ^