loopdowhile.Poucet1.scala.code
var baggels: Int = 0

while (estSurBlanc()) {
  for (compteur <- 1 to 5) {
    avance()
    if (estSurBiscuit()) {
      baggels += 1
    }
  }
  if (baggels>=3) {gauche()}
  if (baggels<=2) {droite()}
}